更新复选框选中的遍历算法

--- a/src/main/resources/templates/xadmin/admin-edit.html
+++ b/src/main/resources/templates/xadmin/admin-edit.html
@@ -133,6 +133,7 @@
 	     		        		for(i=0; i<roleTypeList.length; i++) {
 		     		        		if(roleTypeList[i].id == roleTypeId) {
 		     		        			$(this).attr("checked","''");
+                                        break;
 		     		        		}
 		     		        	}
 	     		        	});
